--- a/ZapWeb/Public/modules/condominio/campanha/item.html
+++ b/ZapWeb/Public/modules/condominio/campanha/item.html
@@ -1,4 +1,4 @@
-<div class="condominio-material-painel-item">
+<div class="condominio-campanha-painel-item">
 	
 	<table>
 		<tr>
@@ -6,7 +6,7 @@
 				<b>Inicio</b>:
 			</td>
 			<td>
-				@{this.material.DataInicio} - @{this.material.HoraInicio}h		
+				@{this.campanha.DataInicio} - @{this.campanha.HoraInicio}h		
 			</td>
 		</tr>
 		<tr>
@@ -14,15 +14,15 @@
 				<b>Fim</b>:
 			</td>
 			<td>
-				@{this.material.DataFim} - @{this.material.HoraFim}h		
+				@{this.campanha.DataFim} - @{this.campanha.HoraFim}h		
 			</td>
 		</tr>
 	</table>
 	
 	<div class="condominio-search-result-cmd">
-		<a href="#Condominio/Editar/Material/@{this.material.Id}">Editar</a>
+		<a href="#Condominio/Editar/Campanha/@{this.campanha.Id}">Editar</a>
 		<span class="condominio-search-result-separador">· </span>
-		<div at="materialAnexos"></div>
+		<div at="campanhaAnexos"></div>
 	</div>
 	
 </div>
