--- a/ZapWeb/Public/modules/condominio/campanha/item.html
+++ b/ZapWeb/Public/modules/condominio/campanha/item.html
@@ -1,5 +1,7 @@
 <div class="condominio-campanha-painel-item">
 	
+	<a href="#Condominio/Editar/Campanha/@{this.campanha.Id}" class="condominio-campanha-editar">Editar</a>
+	
 	<table>
 		<tr>
 			<td style="width: 45px;">
@@ -19,10 +21,8 @@
 		</tr>
 	</table>
 	
-	<div class="condominio-search-result-cmd">
-		<a href="#Condominio/Editar/Campanha/@{this.campanha.Id}">Editar</a>
-		<span class="condominio-search-result-separador">· </span>
-		<div at="campanhaAnexos"></div>
+	<div class="condominio-painel-item-cmd">		
+		<div at="campanhaAnexos" class="condominio-painel-item-anexos"></div>
 	</div>
 	
 </div>
