adicionar hora na proxima data

--- a/ZapWeb/Public/modules/condominio/historico/painel.html
+++ b/ZapWeb/Public/modules/condominio/historico/painel.html
@@ -3,13 +3,17 @@
 	<h5>Histórico de contatos</h5>
 	
 	<div>
-			
+		
+		<div at="add" class="condominio-historico-modal-add"></div>		
+		<div at="popup"></div>
+	
 		<table class="flat-table">
 			<thead>
 				<tr>
 					<th style="min-width: 137px;">Data</th>
 					<th style="width: 450px;">Descrição</th>
 					<th style="min-width: 137px;">Próximo Contato</th>
+					<th style="min-width: 78px;text-align: center">Hora</th>
 					<th style="text-align: center; min-width: 120px;">Classificação</th>
 				</tr>
 			</thead>
@@ -20,12 +24,8 @@
 					</tr>
 				</tr>
 			</tbody>
-			<tbody at="newrow"></tbody>
 		</table>
 			
 	</div>
-	
-	<div at="popup"></div>
-	<div at="add" class="condominio-historico-modal-add"></div>	
 	
 </div>
