--- a/ZapWeb/Public/modules/condominio/historico/popup.html
+++ b/ZapWeb/Public/modules/condominio/historico/popup.html
@@ -4,15 +4,21 @@
 	
 	<table>
 		<tr>
+			<td colspan="10" at="rank"></td>
+		</tr>
+		<tr>
 			<td at="data" style="width: 130px"></td>
 			<td at="proximo" style="width: 130px"></td>
-			<td at="rank"></td>
+			<td at="hora" style="width: 65px"></td>
 		</tr>
 		<tr>
 			<td colspan="3" at="descricao"></td>
 		</tr>
 		<tr>
-			<td colspan="3" align="right" at="__salvar"></td>
+			<td colspan="3" align="right">
+				<div at="__salvar" class="condominio-historico-cmd"></div>
+				<div at="__cancelar" class="condominio-historico-cmd"></div>
+			</td>
 		</tr>
 	</table>
 	
